--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 venv/
-
+.idea
+.DS_Store
 # Created by https://www.toptal.com/developers/gitignore/api/python,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django
 
